# discord-scim

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
src/discord_scim/: __init__.py  cli.py  config.py  discord_client.py  mapper.py  models.py  scim_client.py  sync.py
tests/: conftest.py  test_mapper.py  test_scim_client.py  test_sync.py
